--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html ng-app>
+<html data-ng-app="">
 <head>
   <title></title>
 </head>
 <body>
-  <div class="container">
-    Name: <input type="text" ng-model="name" /> {{ name }}
-  </div>
+  Name:
+  <br />
+  <input type="text" data-ng-model="name" /> {{ name }}
+  
+  <script src="js/angular.min.js"></script>
 </body>
 </html>
